feat: complete installation authentication flow
